--- a/webjs/pom.xml
+++ b/webjs/pom.xml
@@ -13,6 +13,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
